[package]
name = "modernwarfare-internal-rs"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0.68"
cmake = "0.1.45"

[dependencies]
imgui = { path = "imgui-rs/imgui" }
winapi = { version = "0.3.9", features = ["libloaderapi", "debugapi", "winuser"]}
log = "0.4.14"
impl_ops = "0.1.1"
backtrace = "0.3.60"
rand = { version = "0.8.4", features = ["small_rng"] }
linreg = "0.2.0"
enigo = "0.0.14"